examples/test/testpolicy13937.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13937
  namespace: namespace367
spec:
  podSelector:
    matchLabels:
      key39: value30
      key46: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value9
          key40: value5
          key46: value42
      podSelector:
        matchLabels:
          key17: value39
          key28: value26
          key18: value18
